Fix long filter wrap

--- a/Prototype/sass/includes/_long-filters.scss
+++ b/Prototype/sass/includes/_long-filters.scss
@@ -23,12 +23,9 @@
             &-list {
                 padding-left: 0;
                 display: flex;
-                flex-direction: column;
-                height: 20rem;
                 width: 100%;
                 flex-wrap: wrap;
-
-
+                
                 &-item {
                     list-style: none;
                     margin-right: 4rem;
